# NeuroEngine

./: .gitignore  AGENTS.md  CLAUDE.md  FULL_REPO_AUDIT_2026-03-11.md  README.md  alphaengine-audit.md  alphaengine-homepage-rewrite.md  foo.json  package-lock.json  package.json  vercel.json
.claude/: launch.json
ml/inference/optimizer/: Makefile  README.md  pyproject.toml
ml/training/: Makefile  README.md  pyproject.toml
ml/training/approved_runs/: README.md  mlflow-readout-guardian-2026-03-07.json
ml/training/ml_pipeline/: config.py  dataset.py  export_dataset.py  feature_extraction.py  infer.py  metrics.py  model.py  train.py
ml/training/tests/: test_dataset.py  test_infer.py  test_metrics.py  test_model_targets.py
services/biograph_api/: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  alembic.ini  pyproject.toml  railway.json
services/biograph_api/alembic/: env.py
services/biograph_api/app/: __init__.py  active_learning.py  au_friction.py  blink_transport.py  boundary_encoding.py  circuit_breaker.py  claim_safety.py  config.py  cta_reception.py  db.py  domain_exceptions.py  download_service.py  http_client.py  main.py  migrate.py  models.py  narrative_control.py  neuro_eval_runner.py  neuro_observability.py  neuro_score_taxonomy.py  neuro_score_taxonomy_attention.py  neuro_score_taxonomy_core.py  neuro_score_taxonomy_reward.py  neuro_score_taxonomy_rollups.py  predict_service.py  product_rollups.py  quality_thresholds.py  readout_cache.py  readout_guardian.py  readout_guardian_baseline.json  readout_learning_metadata.py  readout_metrics.py  reliability_engine.py  reward_anticipation.py  routes_analyst.py  routes_assets.py  routes_calibration.py  routes_health.py  routes_observability.py  routes_prediction.py  (+34 more)
services/biograph_api/tests/: conftest.py  test_active_learning.py  test_au_friction.py  test_blink_transport.py  test_blink_variance_correction.py  test_boundary_encoding.py  test_capture_archive_observability.py  test_claim_safe_copy.py  test_cta_reception.py  test_frontend_diagnostics.py  test_integration_summary.py  test_migrations.py  test_narrative_control.py  test_neuro_eval_runner.py  test_neuro_observability.py  test_neuro_observability_endpoint.py  test_neuro_score_taxonomy.py  test_neuro_taxonomy_feature_flag.py  test_playback_telemetry.py  test_predict_catalog_reliability.py  test_predict_endpoint.py  test_predict_service.py  test_predict_service_reliability.py  test_product_rollups.py  test_quality_thresholds.py  test_readout_aggregate_synchrony.py  test_readout_config_alignment.py  test_readout_dashboard_regression.py  test_readout_endpoint.py  test_readout_export_package.py  test_readout_guardian.py  test_readout_guardian_metadata_link.py  test_readout_learning_metadata.py  test_readout_metrics.py  test_readout_payload_schema.py  test_reward_anticipation.py  test_scene_diagnostics.py  test_scene_graph_layer.py  test_session_capture_archives.py  test_social_self_scores.py  (+10 more)
services/extractor_worker/: Makefile  README.md  pyproject.toml
services/extractor_worker/biotrace_extractor/: __init__.py  __main__.py  au_proxy.py  baseline.py  blink.py  cli.py  extractor.py  facemesh.py  geometry.py  head_pose.py  io_utils.py  pupillometry.py  quality.py  quality_thresholds.py  rolling.py  schemas.py
services/extractor_worker/biotrace_extractor_tests/: test_baseline.py  test_blink.py  test_passive_signals.py  test_pupillometry.py  test_quality_thresholds.py
(+220 files in other folders)
